--- a/_data/2020/montreal/participants.yml
+++ b/_data/2020/montreal/participants.yml
@@ -3,8 +3,8 @@
   bio: "Taiwo Amoo is a PhD candidate in Computer Science at University of Lagos. His research interests include development and application of machine learning techniques to mine machine generated data and also leverages spatio-temporal models for solving social problems. He underwent his research internship at MainOne where he was involved in several data mining related tasks on system logs. Recently, he was selected as a winner of the MTN Academic Research Design and Innovation Challenge. He is currently the founder of LogTech which leverages machine learning to anticipate failures in intermediary devices in the network using logs and trouble tickets."
 
 - name: Boureima Adamou
-  image: 
-  bio: 
+  image: /2020/montreal/images/Boureima.png
+  bio: "Boureima Adamou is a PhD candidate on food security and livelihoods in University Abdou Moumouni of Niamey (Niger). His research interest is about food security determinants analysis and local livelihoods and sustainable coping strategies in the Sahel region. His focus is on combating food insecurity with a "resilient community" model based on a better understanding of food systems dynamic; sustainable adaptations mechanisms and livelihoods. He holds a master’s degree in statistics from National School of Statistics and Applied Economics (ENSEA, Senegal) and a master’s degree in Society innovations and Development from International Institute of Water and Environmental Engineering of Burkina Faso. He worked as program officer for World Food Program (Niger Country Office) in resilience and capacity development unit. He is co-founder of a private statistics and computer sciences school (ESSI) in Niamey."
  
 - name: Giorgio Barnabò
   image: /2020/montreal/images/Foto_GiorgioBarnabò.jpg
@@ -19,8 +19,8 @@
   bio: "Drioui Chaimae is a PhD candidate at National Institute of Statistics and Applied Economics (INSEA), Morocco. She is a state engineer in statistics and demography, graduated from INSEA. She is also a member of the GES_3D laboratory (Gender, economics, statistics, demography and sustainable development). Her PhD study is interested in the analysis of fertility and reproductive health with a gender perspective."
 
 - name: Shruti Kulkami
-  image: 
-  bio: 
+  image: /2020/montreal/images/Shruti_Kulkarni.jpg
+  bio: "Shruti Kulkarni is a data science professional interested to collaborate across disciplines and develop and apply statistical and machine learning methods on social science and sustainability issues. She has widely used causal modeling and forecasting techniques before and interested to learn more about causal graph models, social network analysis to reason better with environmental-social-governance (ESG) issues. Shruti has finished her M,tech, and Ph.D. from the Department of Management Studies, IISc, Bangalore and she is currently working as deputy manager-data science & analytics with Philips. She is an early career researcher with research interests broadly focusing on advanced computational solutions for sustainability, climate change, and beyond."
   
 - name: Matthew Martin
   image: /2020/montreal/images/Mattew_Martin.jpg
@@ -28,7 +28,7 @@
   
 - name: Georges Alain Tchango Ngalé 
   image: /2020/montreal/images/Photo_Georges.jpg
-  bio: "Georges Alain Tchango Ngalé est actuellement candidat au PhD en démographie à l’Université de Montréal et participe aux activités de recherche dans le cadre du projet « Trajectoires de participation des immigrants et des immigrantes à la société québécoise » (TrajIPaQ) du département de démographie. Dans le cadre de son projet de thèse, il s’intéresse aux relations entre la santé des immigrants et leur participation/intégration au sein de la société québécoise, et mobilise pour ce faire une approche méthodologique mixte. Plus globalement, ses champs d’intérêt heuristique portent sur la santé des populations et les violences basées sur le genre, en essayant de suivre autant que possible une perspective croisée entre le parcours de vie et l’intersectionnalité."
+  bio: "Georges Alain Tchango Ngalé is a PhD candidate in demography at the Université de Montréal and is involved in research activities as part of the Demography Department's "Trajectoires de participation des immigrants et des immigrantes à la société québécoise " (TrajIPaQ) project. His thesis project focuses on the relationship between the health of immigrants and their participation/integration into Quebec society, using a mixed methodological approach. More generally, his heuristic fields of interest focus on population health and gender-based violence, trying to follow as much as possible a cross perspective between life course and intersectionality."
   
 - name: David Pelletier
   image: /2020/montreal/images/David_Pelletier_photo.jpeg   
@@ -43,8 +43,8 @@
   bio: "Xavier St-Denis is an economic sociologist currently working as a Postdoctoral Fellow in the Department of Sociology at the University of Toronto, Scarborough. He completed his graduate work at McGill University and spent two years conducting research in the Income Statistics Division at Statistics Canada, where he developed an expertise in the use of administrative and integrated datasets to explore new questions of high policy relevance. His research focuses on labour markets, stratification, careers, organizations, and comparative political economy using quantitative methods. In his most recent work, he explores the drivers of trends in job stability in Canada, the UK and Germany, and the consequences of job hopping on hiring outcomes in different US occupations. In addition, his postdoctoral research builds on work he conducted in parallel to his PhD on the drivers of intergenerational income transmission in Canada. He is currently dedicating some of his time to research on labour market inequality in the context of COVID-19."
 
 - name: Yang Teoh
-  image: 
-  bio: 
+  image: /2020/montreal/images/Yang_Photo.jpeg
+  bio: "Yang Teoh is a PhD student at the Department of Psychology, University of Toronto. He is interested in the interpersonal emotional processes that guide and sustain prosocial behaviour. HIs research mainly focuses on the design and application of computational algorithms that capture and explain psychological processes as they unfold during social interactions."
   
 - name: Robert Vidigal
   image: /2020/montreal/images/robert-wp.jpg
