--- a/_data/2020/montreal/participants.yml
+++ b/_data/2020/montreal/participants.yml
@@ -3,8 +3,8 @@
   bio: "Taiwo Amoo is a PhD candidate in Computer Science at University of Lagos. His research interests include development and application of machine learning techniques to mine machine generated data and also leverages spatio-temporal models for solving social problems. He underwent his research internship at MainOne where he was involved in several data mining related tasks on system logs. Recently, he was selected as a winner of the MTN Academic Research Design and Innovation Challenge. He is currently the founder of LogTech which leverages machine learning to anticipate failures in intermediary devices in the network using logs and trouble tickets."
 
 - name: Boureima Adamou
-  image: 
-  bio: 
+  image: /2020/montreal/images/Boureima.png
+  bio: "Boureima Adamou is a PhD candidate on food security and livelihoods in University Abdou Moumouni of Niamey (Niger). His research interest is about food security determinants analysis and local livelihoods and sustainable coping strategies in the Sahel region. His focus is on combating food insecurity with a "resilient community" model based on a better understanding of food systems dynamic; sustainable adaptations mechanisms and livelihoods. He holds a master’s degree in statistics from National School of Statistics and Applied Economics (ENSEA, Senegal) and a master’s degree in Society innovations and Development from International Institute of Water and Environmental Engineering of Burkina Faso. He worked as program officer for World Food Program (Niger Country Office) in resilience and capacity development unit. He is co-founder of a private statistics and computer sciences school (ESSI) in Niamey."
  
 - name: Giorgio Barnabò
   image: /2020/montreal/images/Foto_GiorgioBarnabò.jpg
