--- a/_data/2020/montreal/participants.yml
+++ b/_data/2020/montreal/participants.yml
@@ -4,7 +4,7 @@
 
 - name: Boureima Adamou
   image: 
-  bio: 
+  bio: "Boureima Adamou is a PhD candidate on food security and livelihoods in University Abdou Moumouni of Niamey (Niger). His research interest is about food security determinants analysis and local livelihoods and sustainable coping strategies in the Sahel region. His focus is on combating food insecurity with a "resilient community" model based on a better understanding of food systems dynamic; sustainable adaptations mechanisms and livelihoods. He holds a master’s degree in statistics from National School of Statistics and Applied Economics (ENSEA, Senegal) and a master’s degree in Society innovations and Development from International Institute of Water and Environmental Engineering of Burkina Faso. He worked as program officer for World Food Program (Niger Country Office) in resilience and capacity development unit. He is co-founder of a private statistics and computer sciences school (ESSI) in Niamey."
  
 - name: Giorgio Barnabò
   image: /2020/montreal/images/Foto_GiorgioBarnabò.jpg
