--- a/_data/2020/montreal/participants.yml
+++ b/_data/2020/montreal/participants.yml
@@ -19,8 +19,8 @@
   bio: "Drioui Chaimae is a PhD candidate at National Institute of Statistics and Applied Economics (INSEA), Morocco. She is a state engineer in statistics and demography, graduated from INSEA. She is also a member of the GES_3D laboratory (Gender, economics, statistics, demography and sustainable development). Her PhD study is interested in the analysis of fertility and reproductive health with a gender perspective."
 
 - name: Shruti Kulkami
-  image: 
-  bio: 
+  image: /2020/montreal/images/Shruti_Kulkarni.jpg
+  bio: "Shruti Kulkarni is a data science professional interested to collaborate across disciplines and develop and apply statistical and machine learning methods on social science and sustainability issues. She has widely used causal modeling and forecasting techniques before and interested to learn more about causal graph models, social network analysis to reason better with environmental-social-governance (ESG) issues. Shruti has finished her M,tech, and Ph.D. from the Department of Management Studies, IISc, Bangalore and she is currently working as deputy manager-data science & analytics with Philips. She is an early career researcher with research interests broadly focusing on advanced computational solutions for sustainability, climate change, and beyond."
   
 - name: Matthew Martin
   image: /2020/montreal/images/Mattew_Martin.jpg
