--- a/_data/2020/montreal/participants.yml
+++ b/_data/2020/montreal/participants.yml
@@ -43,8 +43,8 @@
   bio: "Xavier St-Denis is an economic sociologist currently working as a Postdoctoral Fellow in the Department of Sociology at the University of Toronto, Scarborough. He completed his graduate work at McGill University and spent two years conducting research in the Income Statistics Division at Statistics Canada, where he developed an expertise in the use of administrative and integrated datasets to explore new questions of high policy relevance. His research focuses on labour markets, stratification, careers, organizations, and comparative political economy using quantitative methods. In his most recent work, he explores the drivers of trends in job stability in Canada, the UK and Germany, and the consequences of job hopping on hiring outcomes in different US occupations. In addition, his postdoctoral research builds on work he conducted in parallel to his PhD on the drivers of intergenerational income transmission in Canada. He is currently dedicating some of his time to research on labour market inequality in the context of COVID-19."
 
 - name: Yang Teoh
-  image: 
-  bio: 
+  image: /2020/montreal/images/Yang_Photo.jpeg
+  bio: "Yang Teoh is a PhD student at the Department of Psychology, University of Toronto. He is interested in the interpersonal emotional processes that guide and sustain prosocial behaviour. HIs research mainly focuses on the design and application of computational algorithms that capture and explain psychological processes as they unfold during social interactions." 
   
 - name: Robert Vidigal
   image: /2020/montreal/images/robert-wp.jpg
