--- a/_data/2020/montreal/participants.yml
+++ b/_data/2020/montreal/participants.yml
@@ -28,7 +28,7 @@
   
 - name: Georges Alain Tchango Ngalé 
   image: /2020/montreal/images/Photo_Georges.jpg
-  bio: "Georges Alain Tchango Ngalé est actuellement candidat au PhD en démographie à l’Université de Montréal et participe aux activités de recherche dans le cadre du projet « Trajectoires de participation des immigrants et des immigrantes à la société québécoise » (TrajIPaQ) du département de démographie. Dans le cadre de son projet de thèse, il s’intéresse aux relations entre la santé des immigrants et leur participation/intégration au sein de la société québécoise, et mobilise pour ce faire une approche méthodologique mixte. Plus globalement, ses champs d’intérêt heuristique portent sur la santé des populations et les violences basées sur le genre, en essayant de suivre autant que possible une perspective croisée entre le parcours de vie et l’intersectionnalité."
+  bio: "Georges Alain Tchango Ngalé is a PhD candidate in demography at the Université de Montréal and is involved in research activities as part of the Demography Department's "Trajectoires de participation des immigrants et des immigrantes à la société québécoise " (TrajIPaQ) project. His thesis project focuses on the relationship between the health of immigrants and their participation/integration into Quebec society, using a mixed methodological approach. More generally, his heuristic fields of interest focus on population health and gender-based violence, trying to follow as much as possible a cross perspective between life course and intersectionality." 
   
 - name: David Pelletier
   image: /2020/montreal/images/David_Pelletier_photo.jpeg   
