--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -106,6 +106,8 @@
   events:
     - name: "Coffee and Alumni Talk with [Türkoğlu, D., Odabaş, M., Tunaoğlu, D., Yavaş, M.](https://compsocialscience.github.io/summer-institute/2019/istanbul/projects)"
       time: "16:00 - 17:00"
+    - name: "SICSS Festival:[Panel discussion on teaching computational social science](https://compsocialscience.github.io/summer-institute/2020/festival)(optional)"
+      time: "19:00 - 20:00"
 
 
 - date: 2020-06-23
@@ -113,7 +115,8 @@
   events:
     - name: "Coffee and Alumni Talk with [Canbolat, S., Kocacik, M.A., Shahin, E.](https://compsocialscience.github.io/summer-institute/2019/istanbul/projects)"
       time: "16:00 - 17:00"
-
+    - name: "SICSS Festival:[Panel discussion on diversity in computational social science](https://compsocialscience.github.io/summer-institute/2020/festival)(optional)"
+      time: "22:30 - 23:30"
 
 - date: 2020-06-24
   name: Work on Group Projects and Alumni Talks
@@ -127,7 +130,8 @@
   events:
     - name: "Coffee and Alumni Talk with [Kekulluoglu, D.](https://compsocialscience.github.io/summer-institute/2019/istanbul/projects)"
       time: "16:00 - 17:00"
-
+    - name: "SICSS Festival:[Creating open source software as part of an academic career](https://compsocialscience.github.io/summer-institute/2020/festival)(optional)"
+      time: "18:00 - 19:00"
       
 - date: 2020-06-26
   name: Present Group Projects
