--- a/_data/2020/montreal/participants.yml
+++ b/_data/2020/montreal/participants.yml
@@ -3,8 +3,8 @@
   bio: "Taiwo Amoo is a PhD candidate in Computer Science at University of Lagos. His research interests include development and application of machine learning techniques to mine machine generated data and also leverages spatio-temporal models for solving social problems. He underwent his research internship at MainOne where he was involved in several data mining related tasks on system logs. Recently, he was selected as a winner of the MTN Academic Research Design and Innovation Challenge. He is currently the founder of LogTech which leverages machine learning to anticipate failures in intermediary devices in the network using logs and trouble tickets."
 
 - name: Boureima Adamou
-  image: 
-  bio: 
+  image: /2020/montreal/images/Boureima.png
+  bio: "Boureima Adamou is a PhD candidate on food security and livelihoods in University Abdou Moumouni of Niamey (Niger). His research interest is about food security determinants analysis and local livelihoods and sustainable coping strategies in the Sahel region. His focus is on combating food insecurity with a resilient community model based on a better understanding of food systems dynamic; sustainable adaptations mechanisms and livelihoods. He holds a master’s degree in statistics from National School of Statistics and Applied Economics (ENSEA, Senegal) and a master’s degree in Society innovations and Development from International Institute of Water and Environmental Engineering of Burkina Faso. He worked as program officer for World Food Program (Niger Country Office) in resilience and capacity development unit. He is co-founder of a private statistics and computer sciences school (ESSI) in Niamey." 
  
 - name: Giorgio Barnabò
   image: /2020/montreal/images/Foto_GiorgioBarnabò.jpg
@@ -28,8 +28,8 @@
   
 - name: Georges Alain Tchango Ngalé 
   image: /2020/montreal/images/Photo_Georges.jpg
-  bio: "Georges Alain Tchango Ngalé est actuellement candidat au PhD en démographie à l’Université de Montréal et participe aux activités de recherche dans le cadre du projet « Trajectoires de participation des immigrants et des immigrantes à la société québécoise » (TrajIPaQ) du département de démographie. Dans le cadre de son projet de thèse, il s’intéresse aux relations entre la santé des immigrants et leur participation/intégration au sein de la société québécoise, et mobilise pour ce faire une approche méthodologique mixte. Plus globalement, ses champs d’intérêt heuristique portent sur la santé des populations et les violences basées sur le genre, en essayant de suivre autant que possible une perspective croisée entre le parcours de vie et l’intersectionnalité."
-  
+  bio: "Georges Alain Tchango Ngalé is a PhD candidate in demography at the Université de Montréal. He participates in research activities as part of Trajectories of Immigrant Participation in Quebec Society (TrajIPaQ) project in the Department of Demography. His thesis project focuses on the relationship between the health of immigrants and their participation/integration into Quebec society, using a mixed methodological approach. More generally, his heuristic fields of interest focus on population health and gender-based violence, trying to follow as much as possible a cross perspective between life course and intersectionality. He has participated in several international conferences and is the author/co-author of a scientific article and book."
+
 - name: David Pelletier
   image: /2020/montreal/images/David_Pelletier_photo.jpeg   
   bio: "David Pelletier is a postdoctoral researcher at McGill University’s Sociology Department and is also affiliated with INRS and Université de Montréal. Trained in demography, he uses surveys and administrative data to study family dynamics and inequality in the Canadian context, but also in the United States and Europe."
