--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -106,7 +106,7 @@
   events:
     - name: "Coffee and Alumni Talk with [Türkoğlu, D., Odabaş, M., Tunaoğlu, D., Yavaş, M.](https://compsocialscience.github.io/summer-institute/2019/istanbul/projects)"
       time: "16:00 - 17:00"
-    - name: "SICSS Festival:[Panel discussion on teaching computational social science](https://compsocialscience.github.io/summer-institute/2020/festival)(optional)"
+    - name: "[SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival):*Panel discussion on teaching computational social science*(optional)"
       time: "19:00 - 20:00"
 
 
@@ -115,7 +115,7 @@
   events:
     - name: "Coffee and Alumni Talk with [Canbolat, S., Kocacik, M.A., Shahin, E.](https://compsocialscience.github.io/summer-institute/2019/istanbul/projects)"
       time: "16:00 - 17:00"
-    - name: "SICSS Festival:[Panel discussion on diversity in computational social science](https://compsocialscience.github.io/summer-institute/2020/festival)(optional)"
+    - name: "[SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival):*Panel discussion on diversity in computational social science]*(optional)"
       time: "22:30 - 23:30"
 
 - date: 2020-06-24
@@ -130,7 +130,7 @@
   events:
     - name: "Coffee and Alumni Talk with [Kekulluoglu, D.](https://compsocialscience.github.io/summer-institute/2019/istanbul/projects)"
       time: "16:00 - 17:00"
-    - name: "SICSS Festival:[Creating open source software as part of an academic career](https://compsocialscience.github.io/summer-institute/2020/festival)(optional)"
+    - name: "[SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival):*Creating open source software as part of an academic career*(optional)"
       time: "18:00 - 19:00"
       
 - date: 2020-06-26
