--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -65,7 +65,7 @@
       time: "15:00 - 16:00"
     - name: "Coffee Break"
       time: "16:00 - 16:30"
-    - name: "Tutorial Session: Computational Text Analysis *by [Matti Nelimarkka](https://matti.mante.li/)*"
+    - name: "Tutorial Session: [Computational Text Analysis](https://compsocialscience.github.io/summer-institute/curriculum) *by [Matti Nelimarkka](https://matti.mante.li/)*"
       time: "16:30 - 18:00"
 
 - date: 2020-06-18
@@ -107,7 +107,7 @@
   events:
     - name: "Coffee and Alumni Talk with [Türkoğlu, D., Odabaş, M., Tunaoğlu, D., Yavaş, M.](https://compsocialscience.github.io/summer-institute/2019/istanbul/projects)"
       time: "16:00 - 17:00"
-    - name: "[SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival):*Panel discussion on teaching computational social science*(optional)"
+    - name: "[SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival): *Panel discussion on teaching computational social science* (optional)"
       time: "19:00 - 20:00"
 
 
@@ -116,7 +116,7 @@
   events:
     - name: "Coffee and Alumni Talk with [Canbolat, S., Kocacik, M.A., Shahin, E.](https://compsocialscience.github.io/summer-institute/2019/istanbul/projects)"
       time: "16:00 - 17:00"
-    - name: "[SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival):*Panel discussion on diversity in computational social science]*(optional)"
+    - name: "[SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival): *Panel discussion on diversity in computational social science]* (optional)"
       time: "22:30 - 23:30"
 
 - date: 2020-06-24
@@ -131,7 +131,7 @@
   events:
     - name: "Coffee and Alumni Talk with [Kekulluoglu, D.](https://compsocialscience.github.io/summer-institute/2019/istanbul/projects)"
       time: "16:00 - 17:00"
-    - name: "[SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival):*Creating open source software as part of an academic career*(optional)"
+    - name: "[SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival): *Creating open source software as part of an academic career* (optional)"
       time: "18:00 - 19:00"
       
 - date: 2020-06-26
