--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -116,7 +116,7 @@
   events:
     - name: "Coffee and Alumni Talk with [Canbolat, S., Kocacik, M.A., Shahin, E.](https://compsocialscience.github.io/summer-institute/2019/istanbul/projects)"
       time: "16:00 - 17:00"
-    - name: "[SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival): *Panel discussion on diversity in computational social science]* (optional)"
+    - name: "[SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival): *Panel discussion on diversity in computational social science* (optional)"
       time: "22:30 - 23:30"
 
 - date: 2020-06-24
