--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -61,8 +61,8 @@
   name: Mass collaboratation and machine learning
   events:
     - name: "10:00 - 10:15 Logistics (*Zoom*)"
-    - name: "10:15 - 10:30 Introduction to the group exercise (*Zoom*)"
-    - name: "10:30 - 11:30 Participate in the Fraglie Families Challenge (*Zoom*)"
+    - name: "10:15 - 10:30 Introduction to the group exercise [Video (link coming soon)] [Slides (link coming soon)] (*Zoom*)"
+    - name: "10:30 - 11:30 Participate in the Fraglie Families Challenge [Lesson plan (participants)] [Lesson plan (organizers)] (*Zoom*)"
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
     - name: "1:00 - 1:15 Break"
