--- a/_data/2020/bay_area/people.yml
+++ b/_data/2020/bay_area/people.yml
@@ -52,6 +52,21 @@ teachingassistants:
       image: /assets/images/tyler_mcdaniel.JPG
       bio: Tyler is a PhD student studying sociology at Stanford University. His current research focuses on school policies and individuals’ daily experiences with segregation. Using survey data, he compares racial and socioeconomic segregation experienced - in locations such as friends’ homes, places of worship, and shopping centers - by students who make different school choices. Broadly, he is interested in spatial inequalities, meritocracy, and predictive algorithms.
 
+participants: 
+  title: Participants
+  people:
+    - name: Carlos Denner
+      image: /assets/images/carlos_denner.jpg
+      bio: "Carlos Denner is an associate professor at the University of Brasilia, and a senior researcher at the Université de Montréal (St-Justine Hospital). He has done research on open source software for the last 15 years to understand the dynamics of collaboration using various statistical models and tools. Nowadays, Carlos works in research capable of incorporating elements of image and text processing, as well as live geo-tagged big data to deliver decision support systems for educational and clinical purposes that prime for their design."
+
+    - name: Issac Dalke 
+      image: /assets/images/issac_dalke.png
+      bio: "Isaac is a graduate student in the sociology department at UC-Berkeley. His current work pairs traditional interpretive techniques and computational text analysis to investigate decision-making practices around who to release from prison in California. More broadly, he is interested in expertise and the art of governing, with an eye to the consequences of state bureaucratic practices for those whose lives hinge on them."
+
+    - name: Krista Schnell
+      image: /assets/images/krista_schnell.png
+      bio: "Krista Schnell is a PhD student in sociology at University of California, Berkeley. Her areas of interest include inequality, gender, and sport. Her master’s research was on how and why women transition into technical careers later in life through coding bootcamps--and she strongly believes there should be greater diversity in tech! She is currently looking forward to her dissertation."
+
 partners:
   title: Community Partners
   people:
