--- a/_data/2020/bay_area/people.yml
+++ b/_data/2020/bay_area/people.yml
@@ -59,8 +59,8 @@ participants:
       image: /assets/images/carlos_denner.jpg
       bio: "Carlos Denner is an associate professor at the University of Brasilia, and a senior researcher at the Université de Montréal (St-Justine Hospital). He has done research on open source software for the last 15 years to understand the dynamics of collaboration using various statistical models and tools. Nowadays, Carlos works in research capable of incorporating elements of image and text processing, as well as live geo-tagged big data to deliver decision support systems for educational and clinical purposes that prime for their design."
 
-    - name: Issac Dalke 
-      image: /assets/images/issac_dalke.png
+    - name: Isaac Dalke 
+      image: /assets/images/isaac_dalke.png
       bio: "Isaac is a graduate student in the sociology department at UC-Berkeley. His current work pairs traditional interpretive techniques and computational text analysis to investigate decision-making practices around who to release from prison in California. More broadly, he is interested in expertise and the art of governing, with an eye to the consequences of state bureaucratic practices for those whose lives hinge on them."
 
     - name: Krista Schnell
