--- a/_data/2020/bay_area/people.yml
+++ b/_data/2020/bay_area/people.yml
@@ -55,6 +55,11 @@ teachingassistants:
 participants: 
   title: Participants
   people:
+  
+    - name: Brooke Staveland
+      image: /assets/images/brooke_staveland.png
+      bio: "Brooke Staveland is a Ph.D. student in Neuroscience at the University of California - Berkeley. She currently uses electrocorticography to study the neurobiology of anxiety, but in the past has used statistical and machine learning methods to look for meaningful treatment groups across a wide range of mental health diagnoses. Most broadly, Brooke hopes to apply computational methods in order to improve mental health treatment and maintenance."
+      
     - name: Carlos Denner
       image: /assets/images/carlos_denner.jpg
       bio: "Carlos Denner is an associate professor at the University of Brasilia, and a senior researcher at the Université de Montréal (St-Justine Hospital). He has done research on open source software for the last 15 years to understand the dynamics of collaboration using various statistical models and tools. Nowadays, Carlos works in research capable of incorporating elements of image and text processing, as well as live geo-tagged big data to deliver decision support systems for educational and clinical purposes that prime for their design."
