add coffee and alumni talk

--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -129,7 +129,7 @@
 - date: 2020-06-25
   name: Work on Group Projects and Alumni Talks
   events:
-    - name: "Coffee and Alumni Talk with [Kekulluoglu, D.](https://compsocialscience.github.io/summer-institute/2019/istanbul/projects)"
+    - name: "Coffee and Alumni Talk with [Kekulluoglu, D., Ghmari, S., Sodaci, H.](https://compsocialscience.github.io/summer-institute/2019/istanbul/people)"
       time: "16:00 - 17:00"
     - name: "[SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival): *Creating open source software as part of an academic career* (optional)"
       time: "18:00 - 19:00"
