--- a/_data/2020/bay_area/people.yml
+++ b/_data/2020/bay_area/people.yml
@@ -63,6 +63,10 @@ participants:
     - name: Carlos Denner
       image: /assets/images/carlos_denner.jpg
       bio: "Carlos Denner is an associate professor at the University of Brasilia, and a senior researcher at the Université de Montréal (St-Justine Hospital). He has done research on open source software for the last 15 years to understand the dynamics of collaboration using various statistical models and tools. Nowadays, Carlos works in research capable of incorporating elements of image and text processing, as well as live geo-tagged big data to deliver decision support systems for educational and clinical purposes that prime for their design."
+      
+    - name: Cheng Ren
+      image: /assets/images/cheng_ren.png
+      bio: "Cheng Ren a Ph.D. student in Social Welfare, with Designated Emphasis in Computational and Data Science and Engineering Program, and is also a data consultant for the D-Lab at UC Berkeley. He applies data science tools to improve the welfare system. His research interests are community engagement and assessment, nonprofit development, migrant well-being, community database, and computational social welfare. He is also a big fan of geographic information systems."
 
     - name: Isaac Dalke 
       image: /assets/images/isaac_dalke.png
