--- a/_data/2020/bay_area/people.yml
+++ b/_data/2020/bay_area/people.yml
@@ -67,6 +67,7 @@ participants:
     - name: Cheng Ren
       image: /assets/images/cheng_ren.png
       bio: "Cheng Ren a Ph.D. student in Social Welfare, with Designated Emphasis in Computational and Data Science and Engineering Program, and is also a data consultant for the D-Lab at UC Berkeley. He applies data science tools to improve the welfare system. His research interests are community engagement and assessment, nonprofit development, migrant well-being, community database, and computational social welfare. He is also a big fan of geographic information systems."
+      website: https://chengren.github.io/
 
     - name: Isaac Dalke 
       image: /assets/images/isaac_dalke.png
