--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -40,7 +40,7 @@
   name:  Ethics
   events:
   
-    - name: "[Discussion on Ethics](https://compsocialscience.github.io/summer-institute/curriculum)"
+    - name: "[Discussion on Ethics](https://compsocialscience.github.io/summer-institute/curriculum#day_1)"
       time: "15:00 - 16:00"
     - name: "Coffee Break"
       time: "16:00 - 16:30"
@@ -50,7 +50,7 @@
 - date: 2020-06-16
   name: Digital Trace Data
   events:
-    - name: "[Discussion on Digital Trace Data](https://compsocialscience.github.io/summer-institute/curriculum)"
+    - name: "[Discussion on Digital Trace Data](https://compsocialscience.github.io/summer-institute/curriculum#day_2)"
       time: "15:00 - 16:00"
     - name: "Coffee Break"
       time: "16:00 - 16:30"
@@ -61,17 +61,17 @@
 - date: 2020-06-17
   name: Digital Surveys and Text as Data
   events:
-    - name: "[Discussion on Surveys in the Digital Age](https://compsocialscience.github.io/summer-institute/curriculum)"
+    - name: "[Discussion on Surveys in the Digital Age](https://compsocialscience.github.io/summer-institute/curriculum#day_4)"
       time: "15:00 - 16:00"
     - name: "Coffee Break"
       time: "16:00 - 16:30"
-    - name: "Tutorial Session: [Computational Text Analysis](https://compsocialscience.github.io/summer-institute/curriculum) *by [Matti Nelimarkka](https://matti.mante.li/)*"
+    - name: "Tutorial Session: [Computational Text Analysis](https://compsocialscience.github.io/summer-institute/curriculum#day_3) *by [Matti Nelimarkka](https://matti.mante.li/)*"
       time: "16:30 - 18:00"
 
 - date: 2020-06-18
   name: Mass Collaboration and Geo-Spatial Data Analysis
   events:
-    - name: "[Discussion on Mass Collaboration](https://compsocialscience.github.io/summer-institute/curriculum)"
+    - name: "[Discussion on Mass Collaboration](https://compsocialscience.github.io/summer-institute/curriculum#day_5)"
       time: "15:00 - 16:00"
     - name: "Coffee Break"
       time: "16:00 - 16:30"
