--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -141,3 +141,5 @@
       time: "12:00 - 14:00"
     - name: "Conclusion"
       time: "14:00 - 14:30"
+    - name: "[SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival): *Opportunities and challenges with industry collaborations* (optional)"
+      time: "17:00 - 18:00"
